--- a/todoLocalStorage.html
+++ b/todoLocalStorage.html
@@ -13,7 +13,9 @@
     
         <div class="container">
             <form  action="#">
-                <input type="text" name="item" id="item" placeholder="Add New" required/>
+                <input type="text" name="item" id="item" placeholder="Add New"/>
+                <button type="submit" id="add">Add</button>
+                <button id="clear">Clear All</button>
             </form>  
             <ul id="list">
                 <li class="checked"></li>
